--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -8,7 +8,20 @@
             "projectInfo": {
                 "name": "week1_variabeleknipper",
                 "resourceId": "/week1_variabeleknipper"
-            }
+            },
+            "connections": [
+                {
+                    "name": "TI MSP430 USB1",
+                    "cores": [
+                        {
+                            "name": "MSP430",
+                            "debuggerSettings": {
+                                "data": "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\" ?>\n<PropertyValues/>\n"
+                            }
+                        }
+                    ]
+                }
+            ]
         }
     ]
 }
